--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
     "classnames": "^2.2.6",
+    "date-fns": "^2.15.0",
     "graphql": "^15.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
