--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "impraise-task",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yakovenkomax.github.io",
   "dependencies": {
     "@apollo/client": "^3.1.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -18,6 +19,7 @@
     "apollo-link-http": "^1.5.17",
     "classnames": "^2.2.6",
     "date-fns": "^2.15.0",
+    "gh-pages": "^3.1.0",
     "graphql": "^15.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -34,6 +36,8 @@
     "dotenv": "^8.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
